--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -4,6 +4,12 @@
 <head>
 <meta charset="UTF-8">
 <title>生徒情報</title>
+<!--// バリデーションエラー用スタイル-->
+<style>
+    .red {
+        color: red;
+    }
+</style>
 </head>
 <body>
     <h1>新規登録</h1>
@@ -13,15 +19,24 @@
     <form th:method="post" th:action="@{/create}" th:object="${studentData}">
         <div>
             <label for="name">名前</label>
-<!--            // th:field - studentDataオブジェクトのnameプロパティにアクセスして[id, name, value]属性を出力 -->
+<!--            // th:field - studentDataオブジェクトのnameプロパティにアクセスして[id, name, value]を出力 -->
             <input type="text" th:field="*{name}" placeholder="名前を入力してください">
+<!--            // th:if - nameプロパティにバリデーションエラーがあるかどうか判定-->
+<!--            // th:errors - nameプロパティに関連するバリデーションエラーを取得表示-->
+<!--            // th:errorclass - nameプロパティにバリデーションエラーが存在する場合に指定のCSS要素を設定する-->
+            <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" th:errorclass="red"></div>
         </div>
         <div>
             <label for="score">点数</label>
-<!--            // th:field - studentDataオブジェクトのscoreプロパティにアクセスして[id, name, value]属性を出力 -->
+<!--            // th:field - studentDataオブジェクトのscoreプロパティにアクセスして[id, name, value]を出力 -->
             <input type="text" th:field="*{score}" placeholder="点数を入力してください">
+<!--            // th:if - scoreプロパティにバリデーションエラーがあるかどうか判定-->
+<!--            // th:errors - scoreプロパティに関連するバリデーションエラーを取得表示-->
+<!--            // th:errorclass - scoreプロパティにバリデーションエラーが存在する場合に指定のCSS要素を設定する-->
+            <div th:if="${#fields.hasErrors('score')}" th:errors="*{score}" th:errorclass="red"></div>
         </div>
         <input type="submit" value="登録">
+        <a th:href="@{/}">戻る</a>
     </form>
 </body>
 </html>
